# ubiquity_launches

./: .travis.yml  CHANGELOG.rst  CMakeLists.txt  README.md  generate_launches_md.py  launches.md  notes.md  package.xml  robot.py
config/: common_costmap.yaml  my_arduino_params.yaml
configuration/: Migrating.md  configure  state_event_enumaration.md
exprimental/launch/: wayne.launch
exprimental/params/: wayne.yaml
exprimental/wayne/launch/: wayne.launch
exprimental/wayne/params/: wayne.yaml
launch/: ros_arduino_bridge.launch
loki_bringup/launch/: bringup.launch  ros_arduino_bridge.launch
loki_camera/launch/: camera.launch
loki_description/launch/: description.launch  rviz_description.launch
loki_description/rviz/: description.rviz
loki_description/urdf/: loki.urdf
loki_rviz_local_costmap/launch/: loki_rviz_local_costmap.launch
loki_rviz_local_costmap/rviz/: loki_rviz_local_costmap.rviz
loki_sonar/launch/: rviz_sonar.launch  sonar.launch
m_fiducial_map/launch/: m_fiducial_map.launch.xml
m_fiducial_map_view/launch/: m_fiducial_map_view.launch.xml
m_fiducial_slam/launch/: m_fiducial_slam.launch.xml
m_fiducial_slam_view/launch/: m_fiducial_slam_view.launch.xml
m_joystick_teleop/launch/: m_joystick_teleop.launch
m_keyboard_drive/launch/: m_keyboard_drive.launch.xml
m_keyboard_navigate/launch/: m_keyboard_navigate.launch.xml
m_loki_base/launch/: m_loki_base.launch
m_magni_base/launch/: m_magni_base.launch
m_move_base/launch/: m_move_base.launch.xml
m_move_base_view/launch/: m_move_base_view.launch.xml
m_raspicam/launch/: m_raspicam.launch.xml
m_raspicam_raw/launch/: m_raspicam_raw.launch.xml  m_raspicam_raw1.launch.xml
m_raspicam_view/launch/: m_raspicam_view.launch.xml
m_robot_base/launch/: m_loki_base.launch.xml  m_magni_base.launch.xml  m_robot_base.launch  m_robot_base.launch.xml  m_sim_base.launch.xml
m_sonar_costmap/launch/: m_sonar_costmap.launch.xml
n_amcl/launch/: n_amcl.launch.xml
n_bus_server/launch/: n_bus_server.launch.xml
n_bus_server/params/: loki.yaml
n_camera/launch/: n_camera.launch
n_cmd_vel_mux/launch/: n_cmd_vel_mux.launch.xml
n_fiducial_detect/launch/: n_fiducial_detect.launch.xml
n_fiducial_slam/launch/: n_fiducial_slam.launch.xml
n_image_uncompress/launch/: n_image_uncompress.launch.xml  n_image_uncompress1.launch.xml
n_joint_state_publisher/launch/: n_joint_state_publisher.launch.xml
n_joy/launch/: n_joy.launch.xml
n_keyboard_drive/launch/: n_keyboard_drive.launch.xml
n_keyboard_navigate/launch/: n_keyboard_navigate.launch.xml
n_kobuki_safety_controller/launch/: n_kobuki_safety_controller.launch.xml
n_loki_serial_master/launch/: n_loki_serial_master.launch.xml
n_map_server/launch/: n_map_server.launch.xml
n_motor_node/launch/: n_motor_launch.launch.xml  n_motor_node.launch.xml
n_move_base/launch/: n_move_base.launch.xml
n_move_base/params/: global_costmap.yaml  local_costmap.yaml
n_navigation_velocity_smoother/launch/: n_navigation_velocity_smoother.launch.xml
n_navigation_velocity_smoother/yaml/: empty.yaml
n_raspicam/launch/: n_raspicam.launch  n_raspicam.launch.xml  n_raspicam1.launch.xml
n_raspicam/params/: loki.yaml
n_relay/launch/: n_relay.launch.xml
n_robot_state_publisher/launch/: n_robot_state_publisher.launch.xml
n_robot_state_publisher/meshes/: HCSR04.stl
n_robot_state_publisher/urdf/: loki.urdf  sim.urdf
n_ros_arduino_bridge/launch/: n_ros_arduino_bridge.launch.xml
n_ros_arduino_bridge/params/: loki.yaml
n_rosservice_call/launch/: n_rosservice_call.launch.xml
n_rqt_image_view/launch/: n_rqt_image_view.launch.xml
n_rviz/launch/: n_rviz.launch.xml
n_sleep_forever/launch/: n_sleep_forever.launch
n_spawner/launch/: n_spawner.launch.xml
n_stage_ros/launch/: n_stage_ros.launch.xml
n_static_transform_publisher/launch/: n_static_transform_publisher.launch.xml
n_teleop_twist_joy/launch/: n_teleop_twist_joy.launch.xml
n_teleop_twist_joy/params/: loki.yaml
n_teleop_twist_keyboard/launch/: n_teleop_twist_keyboard.launch.xml
rviz_local_costmap/launch/: rviz_local_costmap.launch
rviz_loki_sonar/launch/: rviz_loki_sonar.launch
rviz_loki_sonar/rviz/: loki.rviz
rviz_sonar/launch/: rviz_sonar.launch
simulator/m_move_base/launch/: m_move_base.launch.xml
simulator/m_robot_base/launch/: m_robot_base.launch.xml
simulator/n_robot_state_publisher/urdf/: robot.urdf
xloki_joy/launch/: joy.launch
xloki_local_costmap/launch/: local_costmap.launch  rviz_local_costmap.launch
xloki_local_costmap/params/: common_costmap.yaml  global_costmap.yaml
